HTML(fase inicial)

--- a/spotify.html
+++ b/spotify.html
@@ -2,14 +2,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotity Premium</title>
+    <title>Spotify Premium</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <nav>
         <h1>Spotify</h1>
-        <ul>
+        <ul> 
             <li><a href="Premium.html">Premium</a></li>
             <li><a href="Asistencia.html">Asistencia</a></li>
             <li><a href="Descargar.html">Descargar</li>
